Allows overriding author on /templates/meteor.conf

--- a/templates/linux/meteor.conf
+++ b/templates/linux/meteor.conf
@@ -1,6 +1,6 @@
 #!upstart
 description "Meteor Up - <%= appName %>"
-author      "Arunoda Susiripala, <arunoda.susiripala@gmail.com>"
+author      "<%= appAuthor %>"
 
 start on runlevel [2345]
 stop on runlevel [06]
